removed lanyrd check so i can get the site updated

--- a/archive.html
+++ b/archive.html
@@ -38,13 +38,13 @@
               <div class="lnug-menu-text col-xs-12 col-lg-3"><a href="/">This month</a></div>
               <div class="lnug-menu-text col-xs-12 col-lg-3"><a href="/archive">Archive</a></div>
               <div class="lnug-menu-text col-xs-12 col-lg-3"><a href="https://gitter.im/lnug/discuss" target="_blank">Discuss</a></div>
-              <div class="lnug-menu-text col-xs-12 col-lg-3"><a id="lnug-tkt" href="" target="_blank">Free Tickets</a><script>displayTickets();</script></div>
+              <div class="lnug-menu-text col-xs-12 col-lg-3"><a id="lnug-tkt" href="" target="_blank">Free Tickets</a></div>
             </div>
         </div>
       </div>
       <div class="lnug-nextevent">
         <div class="text-center">
-          <p>Next meetup: <span class="lnug-nextmeetup">March 25th</span><script>displayDate();</script></p>
+          <p>Next meetup: <span class="lnug-nextmeetup">August 26th 2015</span></p>
         </div>
       </div>
     </div>
@@ -76,7 +76,7 @@
  <dd>
   <a href="https://github.com/izaakrogan">Izaak Rogan</a><span> - Founders & Coders</span>
 </dd>
- </dl> <dl><dt> June 2015 </dt> <dd>
+ </dl> <dl><dt> June 2015  - <a href="http://lanyrd.com/2015/lnug-June/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://github.com/hxoliverrumbelow">hxoliverrumbelow</a><span> - Blowing out the LAMP</span>
 </dd>
  <dd>
@@ -85,13 +85,13 @@
  <dd>
   <a href="https://github.com/maxwellito">maxwellito</a><span> - Liwe, an open source remote control for WebApps</span>
 </dd>
- </dl> <dl><dt> May 2015 </dt> <dd>
+ </dl> <dl><dt> May 2015  - <a href="http://lanyrd.com/2015/lnug-May/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://github.com/ohjames">ohjames</a><span> - The state of web asset pipelines and the description of a new pipeline that combines the best of all worlds.</span>
 </dd>
  <dd>
   <a href="https://github.com/sideshowcoder">sideshowcoder</a><span> - Server mocking with canned</span>
 </dd>
- </dl> <dl><dt> April 2015 </dt> <dd>
+ </dl> <dl><dt> April 2015  - <a href="http://lanyrd.com/2015/lnug-April/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://github.com/achingbrain">achingbrain</a><span> - Guvnor: running your processes like a boss</span>
 </dd>
  <dd>
@@ -100,7 +100,7 @@
  <dd>
   <a href="https://github.com/simonmcmanus">simonmcmanus</a><span> - Progressive Enhancement Strategies</span>
 </dd>
- </dl> <dl><dt> March 2015 </dt> <dd>
+ </dl> <dl><dt> March 2015  - <a href="http://lanyrd.com/2015/lnug-March/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://github.com/Globegitter">Globegitter</a><span> - Benefits of using Convention over Configuration</span>
 </dd>
  <dd>
@@ -109,7 +109,7 @@
  <dd>
   <a href="https://github.com/alanshaw">alanshaw</a><span> - Super simple service health monitoring with upmon</span>
 </dd>
- </dl> <dl><dt> February 2015 </dt> <dd>
+ </dl> <dl><dt> February 2015  - <a href="http://lanyrd.com/2015/lnug-February/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://github.com/ForbesLindesay">ForbesLindesay</a><span> - Everything you didn't dare asking about jade</span>
 </dd>
  <dd>
@@ -118,7 +118,7 @@
  <dd>
   <a href="https://github.com/basicallydan">basicallydan</a><span> - I'm a Node Module Maintainer (And so can you!)</span>
 </dd>
- </dl> <dl><dt> January 2015 </dt> <dd>
+ </dl> <dl><dt> January 2015  - <a href="http://lanyrd.com/2015/lnug-january/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://twitter.com/flomotlik">Florian Motlik</a><span> - Continuous Delivery with Codeship</span>
 </dd>
  <dd>
@@ -130,7 +130,7 @@
  <dd>
   <a href="https://twitter.com/pimterry">Tim Perry</a><span> - Web Components & Microservices Are The Same Thing</span>
 </dd>
- </dl> <dl><dt> November 2014 </dt> <dd>
+ </dl> <dl><dt> November 2014  - <a href="http://lanyrd.com/2014/lnug-november/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://twitter.com/tomgco">Tom Gallacher</a><span> - Async: the battle</span>
 </dd>
  <dd>
@@ -139,7 +139,7 @@
  <dd>
   <a href="https://twitter.com/tomcartwrightuk">Tom Cartwright</a><span> - Peer connect all the things</span>
 </dd>
- </dl> <dl><dt> October 2014 </dt> <dd>
+ </dl> <dl><dt> October 2014  - <a href="http://lanyrd.com/2014/lnug-october/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://twitter.com/ischi">Philipp Fehre</a><span> - JSON throughout the Stack</span>
 </dd>
  <dd>
@@ -148,13 +148,13 @@
  <dd>
   <a href="https://twitter.com/substack">James Halliday</a><span> - Data Wizzard</span>
 </dd>
- </dl> <dl><dt> September 2014 </dt> <dd>
+ </dl> <dl><dt> September 2014  - <a href="http://lanyrd.com/2014/lnug-september/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://twitter.com/racekjakub">Jakub Racek</a><span> - Scanner and Printer Pi with Node sides</span>
 </dd>
  <dd>
   <a href="https://twitter.com/fmsf303">Francisco Ferreira</a><span> - JavaScript, Java and Dart! Asynch all around us.</span>
 </dd>
- </dl> <dl><dt> August 2014 </dt> <dd>
+ </dl> <dl><dt> August 2014  - <a href="http://lanyrd.com/2014/lnug-august/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://twitter.com/forbesmyester">Matt Forrester</a><span> - Offline Apps and Data Synchronization</span>
 </dd>
  <dd>
@@ -163,7 +163,7 @@
  <dd>
   <a href="https://twitter.com/adam_baldwin">Adam Baldwin</a><span> - node security</span>
 </dd>
- </dl> <dl><dt> July 2014 </dt> <dd>
+ </dl> <dl><dt> July 2014  - <a href="http://lanyrd.com/2014/lnug-july/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://twitter.com/dscape">Nuno Job</a><span> - process.env.NODE_ENV === 'PRODUCTION' for all your 'webscale' apps!</span>
 </dd>
  <dd>
@@ -172,7 +172,7 @@
  <dd>
   <a href="https://twitter.com/lukebond">Luke Bond</a><span> - ZeroMQ with Node</span>
 </dd>
- </dl> <dl><dt> June 2014 </dt> <dd>
+ </dl> <dl><dt> June 2014  - <a href="http://lanyrd.com/2014/lnug-june/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://twitter.com/cutandpastey">Jon Parsons</a><span> - Isomorphic Javascript What, Why and How</span>
 </dd>
  <dd>
@@ -181,7 +181,7 @@
  <dd>
   <a href="https://twitter.com/jna_sh">Joe Nash</a><span> - Functional programming on the clientside with Fay and Elm</span>
 </dd>
- </dl> <dl><dt> May 2014 </dt> <dd>
+ </dl> <dl><dt> May 2014  - <a href="http://lanyrd.com/2014/lnug-may/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://twitter.com/thomasheymann">Thomas Heymann</a><span> - Slicing it up: How we built a micro-service for rendering shared client/server-side one-page apps</span>
 </dd>
  <dd>
@@ -190,7 +190,7 @@
  <dd>
   <a href="https://twitter.com/yrezgui">Yacine Rezgui</a><span> - Develop HTML5 mobile apps in 2014</span>
 </dd>
- </dl> <dl><dt> April 2014 </dt> <dd>
+ </dl> <dl><dt> April 2014  - <a href="http://lanyrd.com/2014/lnug-april/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://twitter.com/Jermolene">Jeremy Ruston</a><span> - A Tale of Two Hosts: rebooting TiddlyWiki for Node.js and the browser</span>
 </dd>
  <dd>
@@ -199,10 +199,10 @@
  <dd>
   <a href="https://twitter.com/ismasan">Ismael Celis</a><span> - Streaming downloads proxy service with Node.js</span>
 </dd>
- </dl> <dl><dt> March 2014 </dt> <dd>
+ </dl> <dl><dt> March 2014  - <a href="http://lanyrd.com/2014/lnug-march/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://twitter.com/timruffles">Tim Ruffles</a><span> - NodeUP Podcast Live: featuring Geoff Wagstaff, Forbes Lindesay, Tancredi Trugenberge,Remy Sharp</span>
 </dd>
- </dl> <dl><dt> February 2014 </dt> <dd>
+ </dl> <dl><dt> February 2014  - <a href="http://lanyrd.com/2014/lnug-february/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/tomgco">Tom Gallacher</a><span> - Easy CPU profiling in Nodejs</span>
 </dd>
  <dd>
@@ -214,7 +214,7 @@
  <dd>
   <a href="http://twitter.com/jaimefjorge">Jaime Jorge</a><span> - Node in Codacy</span>
 </dd>
- </dl> <dl><dt> January 2014 </dt> <dd>
+ </dl> <dl><dt> January 2014  - <a href="http://lanyrd.com/2014/lnug-january/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/alexHacked">Alex Roche</a><span> - NodeJS & Arduino; What, Why & How</span>
 </dd>
  <dd>
@@ -223,7 +223,7 @@
  <dd>
   <a href="http://twitter.com/rowanmanning">Rowan Manning</a><span> - UX For Your Node Modules</span>
 </dd>
- </dl> <dl><dt> November 2013 </dt> <dd>
+ </dl> <dl><dt> November 2013  - <a href="http://lanyrd.com/2013/lnug-november/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/tfoureur">Tristan Foureur</a><span> - Megatron: Javascript-to-javascript compiler</span>
 </dd>
  <dd>
@@ -232,7 +232,7 @@
  <dd>
   <a href="http://twitter.com/_alanshaw">Alan Shaw</a><span> - Hoodie plugins</span>
 </dd>
- </dl> <dl><dt> October 2013 </dt> <dd>
+ </dl> <dl><dt> October 2013  - <a href="http://lanyrd.com/2013/lnug-october/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/rem">Remy Sharp</a><span> - The Bits Behind JS Bin</span>
 </dd>
  <dd>
@@ -241,7 +241,7 @@
  <dd>
   <a href="http://twitter.com/ForbesLindesay">Forbes Lindesay</a><span> - Dissecting a real world node.js application: esdiscuss.org</span>
 </dd>
- </dl> <dl><dt> September 2013 </dt> <dd>
+ </dl> <dl><dt> September 2013  - <a href="http://lanyrd.com/2013/lnug-september/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/ErisDS">Hannah Wolfe</a><span> - Ghost, Just a Blogging Platform</span>
 </dd>
  <dd>
@@ -250,7 +250,7 @@
  <dd>
   <a href="http://twitter.com/knolleary">Nick O'Leary</a><span> - Node-RED, a visual tool for wiring the Internet of Things</span>
 </dd>
- </dl> <dl><dt> August 2013 </dt> <dd>
+ </dl> <dl><dt> August 2013  - <a href="http://lanyrd.com/2013/lnug-august/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/richmarr">Richard Marr</a><span> - Lightning Talk</span>
 </dd>
  <dd>
@@ -280,7 +280,7 @@
  <dd>
   <a href="http://twitter.com/thattommyhall">Tommy Hall</a><span> - Lightning Talk</span>
 </dd>
- </dl> <dl><dt> July 2013 </dt> <dd>
+ </dl> <dl><dt> July 2013  - <a href="http://lanyrd.com/2013/lnug-july/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/timruffles">Tim Ruffles</a><span> - No more pyramids - Approaches to keeping callbacks clean</span>
 </dd>
  <dd>
@@ -292,7 +292,7 @@
  <dd>
   <a href="http://twitter.com/dwynne">David Wynne and Joe Stanton</a><span> - BBC Now that's what I call Node</span>
 </dd>
- </dl> <dl><dt> June 2013 </dt> <dd>
+ </dl> <dl><dt> June 2013  - <a href="http://lanyrd.com/2013/lnug-june/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/adamyeats">Adam Yeats</a><span> - Promises in Node.js</span>
 </dd>
  <dd>
@@ -301,7 +301,7 @@
  <dd>
   <a href="http://twitter.com/antonwhalley">Anton Whalley</a><span> - Thoughts on LevelDB</span>
 </dd>
- </dl> <dl><dt> May 2013 </dt> <dd>
+ </dl> <dl><dt> May 2013  - <a href="http://lanyrd.com/2013/lnug-may/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/shaundunne">Shaun Dunne</a><span> - Grunt your way to Glory</span>
 </dd>
  <dd>
@@ -313,7 +313,7 @@
  <dd>
   <a href="http://twitter.com/mydigitalself">Mike Bartlett and Andrew Newdigate</a><span> - Live Collections with Backbone and Faye</span>
 </dd>
- </dl> <dl><dt> April 2013 </dt> <dd>
+ </dl> <dl><dt> April 2013  - <a href="http://lanyrd.com/2013/lnug-april/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/insertcoffee">Peter Johnson and Tancredi Trugenberge</a><span> - All your base are belong to us</span>
 </dd>
  <dd>
@@ -322,13 +322,13 @@
  <dd>
   <a href="http://twitter.com/_alanshaw">Alan Shaw</a><span> - Node dependency management - David is watching</span>
 </dd>
- </dl> <dl><dt> March 2013 </dt> <dd>
+ </dl> <dl><dt> March 2013  - <a href="http://lanyrd.com/2013/lnug-march/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/bahulneel">Bahul Neel Upadhyaya</a><span> - To infinity and beyond! Protocols and lazy sequences in node #2</span>
 </dd>
  <dd>
   <a href="http://twitter.com/simonmcmanus">Simon McManus</a><span> - Building Roca style web apps with Sizlate and Node.js</span>
 </dd>
- </dl> <dl><dt> February 2013 </dt> <dd>
+ </dl> <dl><dt> February 2013  - <a href="http://lanyrd.com/2013/lnug-february/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/henryoswald">Henry Oswald</a><span> - Practical patterns for building and testing Node.js apps</span>
 </dd>
  <dd>
@@ -340,7 +340,7 @@
  <dd>
   <a href="http://twitter.com/lloydwatkin">Lloyd Watkin</a><span> - pinitto.me: what, why, how</span>
 </dd>
- </dl> <dl><dt> January 2013 </dt> <dd>
+ </dl> <dl><dt> January 2013  - <a href="http://lanyrd.com/2013/lnug-january/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/bahulneel">Bahul Neel Upadhyaya</a><span> - To infinity and beyond! Protocols and lazy sequences in node.</span>
 </dd>
  <dd>
@@ -349,7 +349,7 @@
  <dd>
   <a href="http://twitter.com/pdp">Petko D. Petkov</a><span> - Node.js Security</span>
 </dd>
- </dl> <dl><dt> November 2012 </dt> <dd>
+ </dl> <dl><dt> November 2012  - <a href="http://lanyrd.com/2012/lnug-november/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/ludvik_pl">Paweł Ledwoń</a><span> - Benchmarking Pusher using Node.js</span>
 </dd>
  <dd>
@@ -361,7 +361,7 @@
  <dd>
   <a href="http://twitter.com/thattommyhall">Tom Hall</a><span> - Sound Doodle, A Node Knockout project</span>
 </dd>
- </dl> <dl><dt> October 2012 </dt> <dd>
+ </dl> <dl><dt> October 2012  - <a href="http://lanyrd.com/2012/lnug-october/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/serby">Paul Serby</a><span> - The future of wearable computing with node.js, Raspberry PI and bowler hats</span>
 </dd>
  <dd>
@@ -373,13 +373,13 @@
  <dd>
   <a href="http://twitter.com/Liquidimage_">Tancredi Trugenberge and Peter Johnson</a><span> - Writing real-time games in coffeescript with node.js + socket.io & HTML5</span>
 </dd>
- </dl> <dl><dt> September 2012 </dt> <dd>
+ </dl> <dl><dt> September 2012  - <a href="http://lanyrd.com/2012/lnug-september/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/antonwhalley">Anton Whalley</a><span> - Growing Turtles In Brown Fields : Node in the Microsoft Apps that you have already have</span>
 </dd>
  <dd>
   <a href="http://twitter.com/dominictarr">Dominic Tarr</a><span> - Writing Custom Streams</span>
 </dd>
- </dl> <dl><dt> August 2012 </dt> <dd>
+ </dl> <dl><dt> August 2012  - <a href="http://lanyrd.com/2012/lnug-august/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/thattommyhall">Tom Hall</a><span> - Evolving Genetic Algorithms In The Browser</span>
 </dd>
  <dd>
@@ -388,10 +388,10 @@
  <dd>
   <a href="http://twitter.com/Keithamus">Keith Cirkel</a><span> - A brief history of time</span>
 </dd>
- </dl> <dl><dt> July 2012 </dt> <dd>
+ </dl> <dl><dt> July 2012  - <a href="http://lanyrd.com/2012/lnug-july/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="#">Hack Evening</a><span> - Hack Evening</span>
 </dd>
- </dl> <dl><dt> June 2012 </dt> <dd>
+ </dl> <dl><dt> June 2012  - <a href="http://lanyrd.com/2012/lnug-june/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/abhinay">Abhinay Mehta</a><span> - Timothy: writing Hadoop MapReduce jobs in JS</span>
 </dd>
  <dd>
@@ -403,13 +403,13 @@
  <dd>
   <a href="http://twitter.com/felixge">Felix Geisendörfer</a><span> - As fast as C? Writing high performance JavaScript parsers</span>
 </dd>
- </dl> <dl><dt> May 2012 </dt> <dd>
+ </dl> <dl><dt> May 2012  - <a href="http://lanyrd.com/2012/lnug-may/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/hylomorphism">Matthew Sackman</a><span> - Atomize JS - Safe Distributed Shared Objects</span>
 </dd>
  <dd>
   <a href="http://twitter.com/socketstream">Owen Barnes</a><span> - SocketStream</span>
 </dd>
- </dl> <dl><dt> April 2012 </dt> <dd>
+ </dl> <dl><dt> April 2012  - <a href="http://lanyrd.com/2012/lnug-april/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/m0wfo">Chris Mowforth</a><span> - Rhinode</span>
 </dd>
  <dd>
@@ -439,7 +439,7 @@
  <dd>
   <a href="http://twitter.com/tonydenyer">Tony Denyer</a><span> - cucumber.js with zombie.js</span>
 </dd>
- </dl> <dl><dt> March 2012 </dt> <dd>
+ </dl> <dl><dt> March 2012  - <a href="http://lanyrd.com/2012/lnug-march/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/henryoswald">Henry Oswald</a><span> - sharelatex.com - Experiences building and running a node.js site</span>
 </dd>
  <dd>
@@ -448,7 +448,7 @@
  <dd>
   <a href="#">Chris Munt</a><span> - Higher Order Software for Node.js</span>
 </dd>
- </dl> <dl><dt> February 2012 </dt> <dd>
+ </dl> <dl><dt> February 2012  - <a href="http://lanyrd.com/2012/lnug-february/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/andykent">Andy Kent</a><span> - River and SQL parsing in javascript</span>
 </dd>
  <dd>
@@ -463,7 +463,7 @@
  <dd>
   <a href="http://twitter.com/dscape">Nuno Job</a><span> - Streaming JSON parsing</span>
 </dd>
- </dl> <dl><dt> January 2012 </dt> <dd>
+ </dl> <dl><dt> January 2012  - <a href="http://lanyrd.com/2012/lnug-january/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/richmarr">Richard Marr</a><span> - Powerful data layers with CouchDB and Elasticsearch</span>
 </dd>
  <dd>
@@ -472,7 +472,7 @@
  <dd>
   <a href="http://twitter.com/paddybyers">Paddy Byers</a><span> - Node.js for Android</span>
 </dd>
- </dl> <dl><dt> November 2011 </dt> <dd>
+ </dl> <dl><dt> November 2011  - <a href="http://lanyrd.com/2011/lnug-november/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/alex_young">Alex Young</a><span> - Node Flow Control</span>
 </dd>
  <dd>
@@ -484,7 +484,7 @@
  <dd>
   <a href="http://twitter.com/mloughran">Martyn Loughran</a><span> - Websockets and the Pusher Pipe</span>
 </dd>
- </dl> <dl><dt> October 2011 </dt> <dd>
+ </dl> <dl><dt> October 2011  - <a href="http://lanyrd.com/2011/lnug-october/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/mikedeboer">Mike de Boer</a><span> - Developing large NodeJS libraries with Cloud9 IDE</span>
 </dd>
  <dd>
@@ -493,7 +493,7 @@
  <dd>
   <a href="http://twitter.com/detillen">Richard Miller-Smith</a><span> - State machines and asynchronous programming</span>
 </dd>
- </dl> <dl><dt> September 2011 </dt> <dd>
+ </dl> <dl><dt> September 2011  - <a href="http://lanyrd.com/2011/lnug-september/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="http://twitter.com/andykent">Andy Kent</a><span> - Realtime data analysis over unbounded streams</span>
 </dd>
  <dd>
