--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -25,13 +25,13 @@
               <div class="lnug-menu-text col-xs-12 col-lg-3"><a href="/">This month</a></div>
               <div class="lnug-menu-text col-xs-12 col-lg-3"><a href="/archive">Archive</a></div>
               <div class="lnug-menu-text col-xs-12 col-lg-3"><a href="https://gitter.im/lnug/discuss" target="_blank">Discuss</a></div>
-              <div class="lnug-menu-text col-xs-12 col-lg-3"><a id="lnug-tkt" href="" target="_blank">Free Tickets</a><script>displayTickets();</script></div>
+              <div class="lnug-menu-text col-xs-12 col-lg-3"><a id="lnug-tkt" href="" target="_blank">Free Tickets</a></div>
             </div>
         </div>
       </div>
       <div class="lnug-nextevent">
         <div class="text-center">
-          <p>Next meetup: <span class="lnug-nextmeetup">March 25th</span><script>displayDate();</script></p>
+          <p>Next meetup: <span class="lnug-nextmeetup">March 25th</span></p>
         </div>
       </div>
     </div>
