--- a/archive.html
+++ b/archive.html
@@ -67,7 +67,16 @@
  <dd>
   <a href="https://api.github.com/users/pimterry">Tim Perry</a><span> - TypeScript will finally bring peace to your troubled soul</span>
 </dd>
- </dl> <dl><dt> July 2015 </dt> <dd>
+ </dl> <dl><dt> August 2015 </dt> <dd>
+  <a href="https://api.github.com/users/tjanczuk">Tomasz Janczuk</a><span> - Rethinking backend with webtasks</span>
+</dd>
+ <dd>
+  <a href="https://api.github.com/users/danjenkins">Dan Jenkins</a><span> - WebRTC Reborn</span>
+</dd>
+ <dd>
+  <a href="https://api.github.com/users/pimterry">Tim Perry</a><span> - TypeScript will finally bring peace to your troubled soul</span>
+</dd>
+ </dl> <dl><dt> July 2015  - <a href="http://lanyrd.com/2015/lnug-July/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://github.com/jdNash">Joe Nash</a><span> - Insert Token: Immersive UX with Tokenization</span>
 </dd>
  <dd>
