--- a/archive.html
+++ b/archive.html
@@ -58,16 +58,7 @@
        <div class="col-xs-12 col-md-4 text-center sponsor-label hidden-xs hidden-sm">Sponsors</div>
     </div>
 
-    <div class="col-xs-12 col-md-8 col-lg-8 lnug-content lnug-archive"><dl><dt> August 2015 </dt> <dd>
-  <a href="https://api.github.com/users/tjanczuk">Tomasz Janczuk</a><span> - Rethinking backend with webtasks</span>
-</dd>
- <dd>
-  <a href="https://api.github.com/users/danjenkins">Dan Jenkins</a><span> - WebRTC Reborn</span>
-</dd>
- <dd>
-  <a href="https://api.github.com/users/pimterry">Tim Perry</a><span> - TypeScript will finally bring peace to your troubled soul</span>
-</dd>
- </dl> <dl><dt> August 2015 </dt> <dd>
+    <div class="col-xs-12 col-md-8 col-lg-8 lnug-content lnug-archive"><dl><dt> August 2015  - <a href="http://lanyrd.com/2015/lnug-August/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://api.github.com/users/tjanczuk">Tomasz Janczuk</a><span> - Rethinking backend with webtasks</span>
 </dd>
  <dd>
