putting back lanyrd link

--- a/archive.html
+++ b/archive.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
   <meta charset="utf-8">
-  <title>LNUG - London Node User Group</title>
+  <title>Page title goes here</title>
   <meta name="description" content="London Node.js User Group is a meetup for developers but everyone is welcome. We meet every month to talk about Node, Javascript and to network">
   <!-- og  + meta data -->
   <meta property="og:title" content="LNUG - London Node User Group">
@@ -59,13 +59,13 @@
     </div>
 
     <div class="col-xs-12 col-md-8 col-lg-8 lnug-content lnug-archive"><dl><dt> August 2015  - <a href="http://lanyrd.com/2015/lnug-August/" target="_blank">Lanyrd</a> </dt> <dd>
-  <a href="https://api.github.com/users/tjanczuk">Tomasz Janczuk</a><span> - Rethinking backend with webtasks</span>
+  <a href="https://github.com/tjanczuk">Tomasz Janczuk</a><span> - Rethinking backend with webtasks</span>
 </dd>
  <dd>
-  <a href="https://api.github.com/users/danjenkins">Dan Jenkins</a><span> - WebRTC Reborn</span>
+  <a href="https://github.com/danjenkins">Dan Jenkins</a><span> - WebRTC Reborn</span>
 </dd>
  <dd>
-  <a href="https://api.github.com/users/pimterry">Tim Perry</a><span> - TypeScript will finally bring peace to your troubled soul</span>
+  <a href="https://github.com/pimterry">Tim Perry</a><span> - TypeScript will finally bring peace to your troubled soul</span>
 </dd>
  </dl> <dl><dt> July 2015  - <a href="http://lanyrd.com/2015/lnug-July/" target="_blank">Lanyrd</a> </dt> <dd>
   <a href="https://github.com/jdNash">Joe Nash</a><span> - Insert Token: Immersive UX with Tokenization</span>
