putting in manual title

--- a/archive.html
+++ b/archive.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
   <meta charset="utf-8">
-  <title>Page title goes here</title>
+  <title>LNUG - London Node User Group</title>
   <meta name="description" content="London Node.js User Group is a meetup for developers but everyone is welcome. We meet every month to talk about Node, Javascript and to network">
   <!-- og  + meta data -->
   <meta property="og:title" content="LNUG - London Node User Group">
